kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invoicer-service
  namespace: default
spec:
  selector:
    app: invoicer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
